@@ -1,7 +1,7 @@
 Package: polyCub
 Title: Cubature over Polygonal Domains
 Version: 0.4-3
-Date: 2014-02-17
+Date: 2014-03-14
 Authors@R: c(person("Sebastian", "Meyer",
                     email = "Sebastian.Meyer@ifspm.uzh.ch",
                     role = c("aut","cre","trl")),
@@ -11,14 +11,16 @@ Authors@R: c(person("Sebastian", "Meyer",
 Description: A package providing methods for cubature (numerical integration)
              over polygonal domains.
              Currently, four cubature methods are implemented:
-             the two-dimensional midpoint rule (a simple wrapper around
-             spatstat::as.im.function), the product Gauss cubature proposed
-             by Sommariva and Vianello (2007), an adaptive cubature for
-             isotropic functions via line integrate() along the boundary,
+             the two-dimensional midpoint rule as a simple wrapper around
+             as.im.function() from package spatstat (Baddeley and Turner, 2005),
+             the product Gauss cubature by Sommariva and Vianello (2007),
+             an adaptive cubature for isotropic functions via line integrate()
+             along the boundary (Meyer and Held, 2014),
              and quasi-exact methods specific to the integration of the
-             bivariate Gaussian density over polygonal and circular domains.
-             For cubature over simple hypercubes, the
-             packages cubature and R2Cuba are more appropriate.
+             bivariate Gaussian density over polygonal and circular domains
+             (based on formulae from the Abramowitz and Stegun (1972) handbook).
+             For cubature over simple hypercubes, the packages cubature and
+             R2Cuba are more appropriate.
 License: GPL-2
 URL: https://github.com/WastlM/polyCub
 BugReports: https://github.com/WastlM/polyCub/issues
