@@ -4,7 +4,7 @@
 ### a copy of which is available at http://www.r-project.org/Licenses/.
 ###
 ### Copyright (C) 2013-2014 Sebastian Meyer
-### Time-stamp: <[polyCub.iso.R] by SM Die 18/02/2014 11:21 (CET)>
+### Time-stamp: <[polyCub.iso.R] by SM Fre 14/03/2014 14:31 (CET)>
 ################################################################################
 
 
@@ -55,7 +55,9 @@
 #'
 #' Meyer, S. and Held, L. (2014).
 #' Power-law models for infectious disease spread.
-#' Available from
+#' Revised for the \emph{Annals of Applied Statistics}.
+#' \href{http://arxiv.org/abs/1308.5115}{arXiv:1308.5115}.
+#' Supplements are available from
 #' \url{http://www.biostat.uzh.ch/research/manuscripts/powerlaw.html}.
 #' @keywords math spatial
 #' @family polyCub-methods
