@@ -3,8 +3,8 @@
 ### Free software under the terms of the GNU General Public License, version 2,
 ### a copy of which is available at http://www.r-project.org/Licenses/.
 ###
-### Copyright (C) 2009-2013 Sebastian Meyer
-### Time-stamp: <[tools.R] by SM Don 05/12/2013 15:04 (CET)>
+### Copyright (C) 2009-2014 Sebastian Meyer
+### Time-stamp: <[tools.R] by SM Fre 14/03/2014 15:46 (CET)>
 ###
 ### Tiny toolbox of internal function
 ################################################################################
@@ -66,6 +66,7 @@ isScalar <- function (x) {
 ##' @importFrom spatstat plot.owin
 ## CAVE: need to import plot.owin for compatibility with spatstat <1.33-0,
 ##       since plot.owin was not registered as an S3-method for plot
+## NOTE: we don't import graphics::plot since it is already imported via sp
 plot_polyregion <- function (polyregion, lwd=2, add=FALSE)
 {
     if (is.vector(polyregion, mode="list")) { # internal xylist object
